# podcast-splitter

./: .env.sample  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  split_by_seconds_example.sh  split_by_silence_example.sh  update_project.py  version.py
classes/: by_silence_single_file_processor.py  command.py  logger.py  multiple_file_processor.py  single_file_processor.py
classes/abstracts/: has_logger.py
podcast_splitter/: cli.py  version.py
podcast_splitter/classes/: command.py  multiple_file_processor.py  print_envs_action.py
